# mq-cenn

./: .gitignore  LICENSE  README.md  bootstrap_phase1.py  mq_cenn.py  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  setup.py
benchmarks/: README.md
benchmarks/configs/: ablation.yaml  default_regression.yaml
benchmarks/scripts/: run_ablation.py  run_benchmark.py  summarize_results.py
cli/: __init__.py  main.py
docs/: index.md  installation.md  quickstart.md
docs/api/: ablation.md  core.md  regressor.md
docs/theory/: kernel_lifting.md  qml_inspired_positioning.md  reliability_fallback.md  signed_interference_gate.md
examples/: 01_regression_quickstart.py  02_ablation_study.py  03_prediction_intervals.py  04_reliability_diagnostics.py
mq_cenn/: __init__.py  legacy.py
mq_cenn/ablation/: __init__.py  suite.py
mq_cenn/backends/: __init__.py  cpp_backend.py  cuda_backend.py  dispatcher.py  numpy_backend.py
mq_cenn/cli/: __init__.py  main.py
mq_cenn/core/: __init__.py  bridge.py  experts.py  gate.py  kernels.py  reliability.py
mq_cenn/estimators/: __init__.py  anomaly.py  multistep.py  regressor.py
mq_cenn/preprocessing/: __init__.py  calendar_features.py  seasonal_lags.py  windowing.py
mq_cenn/utils/: __init__.py  conformal.py  seed.py  validation.py
native/cpp/: bindings.cpp  (+3 more)
tests/: test_ablation.py  test_backends.py  test_bridge.py  test_experts.py  test_gate.py  test_kernels.py  test_new_estimators_imports.py  test_regressor.py  test_reliability.py  test_validation.py  test_windowing_multistep.py
(+6 files in other folders)
